--- a/investisement.html
+++ b/investisement.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>investisement</title>
     <link rel="stylesheet" href="./css/investisement.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header id="head">
@@ -41,8 +45,8 @@
             </div>
             <div class="card">
                 <img src="./images/energie.png" alt="">
-                <h3>AgriSustain</h3>
-                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <h3>Énergie Future</h3>
+                <p>Notre projet d'énergie renouvelable vise à transformer la manière dont nous produisons et consommons l'énergie. En mettant en place des solutions innovantes telles que l'énergie solaire, éolienne et biomasse, nous nous engageons à réduire les émissions de carbone tout en offrant une source d'énergie durable et abordable.</p>
                 <div>
                     <p class="date">2024/2026</p>
                     <button class="invest">Invest</button>
@@ -50,8 +54,8 @@
             </div>
             <div class="card">
                 <img src="./images/crypto.png" alt="">
-                <h3>AgriSustain</h3>
-                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <h3>CryptoSphere</h3>
+                <p>Notre projet crypto vise à révolutionner le paysage financier en proposant une plateforme sécurisée et innovante dédiée à l'échange et à la gestion des actifs numériques. Grâce à une technologie blockchain avancée, nous offrons des transactions rapides, transparentes et à faible coût</p>
                 <div>
                     <p class="date">2024/2026</p>
                     <button class="invest">Invest</button>
@@ -59,8 +63,8 @@
             </div>
             <div class="card">
                 <img src="./images/habitat.png" alt="">
-                <h3>AgriSustain</h3>
-                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <h3>Habitat Nova</h3>
+                <p>Habitat Nova est un projet immobilier innovant conçu pour transformer notre conception du cadre de vie moderne. Situé dans un emplacement privilégié, notre développement se distingue  le design élégant et l'adaptabilité aux besoins des familles contemporaines.notre équipe est dédiée à accompagner chaque futur résident</p>
                 <div>
                     <p class="date">2024/2026</p>
                     <button class="invest">Invest</button>
@@ -68,8 +72,8 @@
             </div>
             <div class="card">
                 <img src="./images/innovate.png" alt="">
-                <h3>AgriSustain</h3>
-                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <h3>InnovateX</h3>
+                <p>InnovateX est une startup dynamique et visionnaire, engagée à révolutionner le paysage technologique en transformant des idées novatrices en solutions concrètes. Notre mission est claire : développer des technologies de pointe qui répondent aux défis contemporains auxquels font face divers secteurs, tels que la santé.</p>
                 <div>
                     <p class="date">2024/2026</p>
                     <button class="invest">Invest</button>
@@ -77,8 +81,8 @@
             </div>
             <div class="card">
                 <img src="./images/capital.png" alt="">
-                <h3>AgriSustain</h3>
-                <p>Notre projet agricole se concentre sur la production durable et innovante de cultures de haute qualité, tout en préservant l'environnement. Nous intégrons des techniques modernes d'agriculture, telles que l'irrigation intelligente et l'agroécologie, pour maximiser les rendements tout en minimisant l'impact écologique.</p>
+                <h3>Capital Vision</h3>
+                    <p>Capital Vision est un fonds d'investissement conçu pour offrir aux investisseurs l'opportunité de participer à des projets prometteurs dans divers secteurs, tels que la technologie, l'immobilier et les énergies renouvelables. Notre objectif est de générer des rendements attractifs tout en soutenant des entreprises innovantes et durables.</p>
                 <div>
                     <p class="date">2024/2026</p>
                     <button class="invest">Invest</button>
@@ -118,7 +122,7 @@
                     <div class="socialLinks">
                         <img src="./images/facebook.svg" alt="">
                         <img src="./images/linkDin.svg" alt="">
-                        <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="ig" width="30" height="30" style="margin: 0 10px 0 0;" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
                             <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
                             <path d="M17.5 6.5h.01"></path>
