--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           contrôle de ses investissements tout en bénéficiant de solutions de
           prêt simples et efficaces.
         </p>
-        <a href="#" class="btn1">Plus</a>
+        <a href="./Apropos.html" class="btn1">Plus</a>
       </div>
     </div>
   </section>
@@ -99,7 +99,7 @@
       </div>
     </div>
 
-    <a href="#" class="btn2">Voir Nos avantages</a>
+    <a href="./Apropos.html" class="btn2">Voir Nos avantages</a>
   </section>
 
   <section class="container">
@@ -115,7 +115,7 @@
           contrôle de ses investissements tout en bénéficiant de solutions de
           prêt simples et efficaces.
         </p>
-        <a href="#" class="btn2">Investir </a>
+        <a href="./investisement.html" class="btn2">Investir </a>
       </div>
       <div>
       <div class="row-itemsCenter">
@@ -156,19 +156,19 @@
         <h4>Conseils Financier</h4>
       </div>
     </div>
-    <a href="#" class="btn3"> Rejoinez-Nous</a>
+    <a href="./Contact.html" class="btn3"> Rejoinez-Nous</a>
   </section>
 
   <section class="container">
     <h2>Nos Partenaires</h2>
     <div class="logoPartenaire">
 
-          <img src="images/pr1.png" alt="p1" />
-          <img src="images/pr2.png" alt="p2" />
-          <img src="images/pr3.png" alt="p3" />
-          <img src="images/pr4.png" alt="p3" />
-          <img src="images/pr5.png" alt="p6" />
-          <img src="images/pr6.png" alt="p6" />
+          <img src="images/logo1.svg" alt="p1" />
+          <img src="images/logo2.svg" alt="p2" />
+          <img src="images/logo3.svg" alt="p3" />
+          <img src="images/logo4.svg" alt="p3" />
+          <img src="images/logo5.svg" alt="p6" />
+          <img src="images/logo6.svg" alt="p6" />
    
     </div>
   </section>
