--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </ul>
     <button><a href="./login.html">Connecter</a></button>
   </header>
-  <script src="./script.js"></script>
+  <script src="./js/script.js"></script>
   <!--------------- home --------------------->
 
 <section class="home-pret" id="home">
@@ -138,6 +138,8 @@
   <section class="container">
     <h2 class="important">Futurebank répond à vos attentes</h2>
 
+
+    <div  class="block_hide-mobile">
     <div class="row-items">
       <div class="container-box">
         <img class="img-paragraphe" src="images/marocain_resident_a_letranger.webp" alt="apropos" />
@@ -149,13 +151,27 @@
       </div>
       <div class="container-box">
         <img class="img-paragraphe" src="images/jeune_actif.webp" alt="apropos" />
-        <h4>Prêts</h4>
+        <h4>Jeune actif</h4>
       </div>
       <div class="container-box">
         <img class="img-paragraphe" src="images/professionnel.webp" alt="apropos" />
-        <h4>Conseils Financier</h4>
+        <h4>Professionnel</h4>
       </div>
     </div>
+    </div>
+
+
+    <div  class="block_hide-desktop">
+      <div class="carousel">
+        <div class="slides" id="slides">
+            
+        </div>
+    </div>
+  
+    </div>
+
+
+
     <a href="./Contact.html" class="btn3"> Rejoinez-Nous</a>
   </section>
 
@@ -242,4 +258,6 @@
 
 </body>
 
+
+<script src="./js/client.js"></script>
 </html>
