--- a/Pret.html
+++ b/Pret.html
@@ -58,7 +58,7 @@
         <img src="images/nous-contacter.png" alt="image d'une conseillere ">
         <div class="assist">
             <h2>Assistance</h2>
-            <p>Si vous souhaitez être contacté par l'un de nos conseillers, veuillez remplir le formulaire ci-dessous. Nous nous engageons à vous répondre rapidement. Assurez-vous que cette page est responsive et accessible sur tous les écrans.</p>
+            <p>Si vous souhaitez être contacté par l'un de nos conseillers, veuillez remplir le formulaire ci-dessous. Nous nous engageons à vous répondre rapidement.</p>
             <input type="email" name="email" placeholder="Votre email">
             <button>Envoyer</button>
         </div>
