fix the script and fix the media query in contact page

--- a/Pret.html
+++ b/Pret.html
@@ -105,7 +105,7 @@
     <div class="ruban2">
         <h3>© 2024 Codebenders. All rights reserved</h3>    
     </div>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="./pret.js"></script>
 </body>
 </html>
