--- a/Contact.html
+++ b/Contact.html
@@ -161,7 +161,7 @@
       <h3>© 2024 Codebenders. All rights reserved</h3>
   </div>
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="./scriptcontact.js"></script>
 </body>
 </html>
