--- a/investisement.html
+++ b/investisement.html
@@ -132,6 +132,6 @@
             <p>© 2024 Codebenders. All rights reserved</p>
         </div>
     </footer>
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
