fix some issue with the navigation menu

--- a/Contact.html
+++ b/Contact.html
@@ -21,7 +21,7 @@
          <li><a href="./index.html">Home</a></li>
          <li><a href="./investisement.html">investisement</a></li>
          <li><a href="./Pret.html">Prets</a></li>
-         <li><a href="./Apropos.html">A propos</a></li>
+         <li><a href="./Apropos.html">Apropos</a></li>
          <li><a href="./Contact.html">Contact</a></li>
          <li><a href="./login.html">Connecter</a></li>
         </ul>
