--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="./index.html">Home</a></li>
       <li><a href="./investisement.html">investisement</a></li>
       <li><a href="./Pret.html">Prets</a></li>
-      <li><a href="./Apropos.html">A propos</a></li>
+      <li><a href="./Apropos.html">Apropos</a></li>
       <li><a href="./Contact.html">Contact</a></li>
       <li><a href="./login.html">Connecter</a></li>
     </ul>
@@ -231,33 +231,6 @@
 <div class="ruban2">
     <h3>© 2024 Codebenders. All rights reserved</h3>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-
-
 <script src="./js/client.js"></script>
+</body>
 </html>
