before adding the apropos page

--- a/index.html
+++ b/index.html
@@ -190,47 +190,48 @@
   </section>
 
 
-  <section class="footer">
-
-    <div class="futurebank">
-        <h4>FutureBank</h4>
-        <p>Votre partenaire de <br>confiance pour un avenir <br> financier prospère.</p>
-    </div>
-
-    <div class="list">
-        <h4>Explore</h4>
-        <ul>
-            <li><a href="#">Accueil</a></li>
-            <li><a href="#">Investissement</a></li>
-            <li><a href="#">Prets</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-
-    <div class="list">
-        <h4>A propos</h4>
-        <ul>
-            <li><a href="#">(212)789-12301</a></li>
-            <li><a href="#">Future@Bank.com</a></li>
-            <li><a href="#">South 13th street</a></li>
-            <li><a href="#">Rabat Maroc</a></li>
-        </ul>
-    </div>
-
-    <div class="list">
-        <h4>Suivez-nous</h4>
-        <div class="social">
-            <a href="#"><i class='bx bxl-facebook' ></i></a>
-            <a href="#"><i class='bx bxl-pinterest' ></i></a>
-            <a href="#"><i class='bx bxl-whatsapp' ></i></a>
-            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+  <footer>
+    <div class="all">
+            <div class="Fdescription">
+                <img src="./images/LogoFooter.png" alt="">
+                <p>Votre partenaire de confiance pour un avenir financier prospère.</p>
+            </div>
+            <div class="Explore">
+                <h4>Explore</h4>
+                <ul>
+                    <li>Acceuil</li>
+                    <li>Investissement</li>
+                    <li>Prets</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+            <div class="Apropos">
+                <h5>Apropos</h5>
+                <ul>
+                    <li>(212) 789-12301</li>
+                    <li>Future@Bank.com</li>
+                    <li>South 13th street</li>
+                    <li>Rabat Maroc</li>
+                </ul>
+            </div>
+            <div class="social">
+                <h6>Suivez-nous</h6>
+                <div class="socialLinks">
+                    <img src="./images/facebook.svg" alt="">
+                    <img src="./images/linkDin.svg" alt="">
+                    <svg class="ig" width="30" height="30" style="margin: 0 10px 0 0;" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                        <path d="M17.5 6.5h.01"></path>
+                      </svg>
+                    <img src="./images/whatssap.svg" alt="">
+                </div>
+            </div>
         </div>
+    <div class="copyright">
+        <p>© 2024 Codebenders. All rights reserved</p>
     </div>
-
-</section>
-<div class="ruban2">
-    <h3>© 2024 Codebenders. All rights reserved</h3>
-</div>
+</footer>
 <script src="./js/client.js"></script>
 </body>
 </html>
