change the js files to the js folder

--- a/Pret.html
+++ b/Pret.html
@@ -114,7 +114,7 @@
         </div>
     </footer>
     <script src="./js/script.js"></script>
-    <script src="./pret.js"></script>
+    <script src="./js/pret.js"></script>
 </body>
 
 </html>
