--- a/Contact.html
+++ b/Contact.html
@@ -174,7 +174,7 @@
     </div>
   </footer>
   <script src="./js/script.js"></script>
-  <script src="./scriptcontact.js"></script>
+  <script src="./js/scriptcontact.js"></script>
 </body>
 
 </html>
