--- a/login.html
+++ b/login.html
@@ -136,7 +136,7 @@
       </div>
    </div>
 
-   <script src="./scriptlogin.js"></script>
+   <script src="./js/scriptlogin.js"></script>
 
 </body>
 
