finish the project

--- a/Pret.html
+++ b/Pret.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content=" Discover profitable and eco-friendly investment projects in agriculture, energy, technology, and more with our bank's innovative platform. Calculate your loans with our built-in tool and start building your sustainable financial future today. Contact us at (212) 789-12301 or Future@Bank.com">
+    <meta name="robots" content="index,follow">
+    <meta name="keywords"
+        content="bank , futureBank , loan , contract , money , investisement , deposit , projects , finance , agricoleProjects ">
+    <link rel="icon" href="./images/logo.svg">
     <title>Pret</title>
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="./css/Pret.css">
