--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content=" Discover profitable and eco-friendly investment projects in agriculture, energy, technology, and more with our bank's innovative platform. Calculate your loans with our built-in tool and start building your sustainable financial future today. Contact us at (212) 789-12301 or Future@Bank.com">
+  <meta name="robots" content="index,follow">
+  <meta name="keywords"
+    content="bank , futureBank , loan , contract , money , investisement , deposit , projects , finance , agricoleProjects ">
+  <link rel="icon" href="./images/logo.svg">
   <title>Acceuil</title>
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
 
   <link rel="stylesheet" href="./css/styles.css">
 </head>
